@@ -33,6 +33,7 @@ static struct itimerval itimer;
  * been changed to do the kill() thing. */
 pid_t server_lock(char *program, char *pidfile, int debug)
 {
+#ifndef SOLARIS
   char buf[10];
   FILE *pf;
   pid_t pid;
@@ -95,7 +96,7 @@ pid_t server_lock(char *program, char *pidfile, int debug)
   fprintf(pf, "%d\n", getpid());
   fclose(pf);
   } 
-
+#endif
   return 0;
 }
 
@@ -104,6 +105,7 @@ pid_t server_lock(char *program, char *pidfile, int debug)
  */
 int check_lockfile(const char *program, const char *pidfile)
 {
+#ifndef SOLARIS
     char buf[10];
     FILE *pf;
     pid_t pid;
@@ -118,6 +120,7 @@ int check_lockfile(const char *program, const char *pidfile)
         }
         fclose(pf);
     }
+#endif
     return 0;
 }
 
@@ -126,6 +129,7 @@ int check_lockfile(const char *program, const char *pidfile)
  */
 int create_lockfile(const char *program, const char *pidfile)
 {
+#ifndef SOLARIS
     FILE *pf;
     int mask;
   
@@ -142,6 +146,6 @@ int create_lockfile(const char *program, const char *pidfile)
     umask(mask);
     fprintf(pf, "%d\n", getpid());
     fclose(pf);
-
+#endif
     return 0;
 }
